kubernetes/apps/networking/netdisco/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: netdisco
spec:
  hostnames:
    - netdisco.${CLUSTER_DOMAIN}
  parentRefs:
    - name: tailnet
      namespace: gateway-system
      sectionName: https
  rules:
    - backendRefs:
        - kind: Service
          name: netdisco
          port: 5000
